<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".OtpVerificationActivity">


    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/rec_otp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/ambit_regular"
        android:padding="10dp"
        android:textSize="17sp">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/txt"
        android:theme="@style/et"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="0123456789"
            android:gravity="center"
            android:maxLength="4"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:drawablePadding="10dp"
            android:fontFamily="@font/regular"
            android:hint="@string/v_code"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/verify_btn"
        android:text="@string/verify"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:fontFamily="@font/ambit_bold"
        android:textAllCaps="false"
        android:layout_below="@id/et_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

    </Button>

</RelativeLayout>